# AmpereQuest

./: .gitignore  DEMO_SCRIPT.md  README.md  SUBMISSION.md  architecture.excalidraw  next.config.ts  package.json  pnpm-lock.yaml
anchor/: Anchor.toml  jest.config.js
anchor/programs/charging_session/: Cargo.toml
anchor/programs/game_engine/: Cargo.toml
anchor/programs/points_marketplace/: Cargo.toml
anchor/programs/points_marketplace/src/: lib.rs
anchor/programs/virtual_plot/: Cargo.toml
anchor/programs/virtual_plot/src/: lib.rs
anchor/scripts/: initialize-demo.ts
anchor/src/: charging-session-exports.ts  index.ts  points-marketplace-exports.ts  virtual-plot-exports.ts
anchor/tests/: basic.test.ts  charging-session.test.ts  game-engine.test.ts  points-marketplace.test.ts  teardown.ts  virtual-plot.test.ts
scripts/: start-demo.sh
src/app/: layout.tsx  page.tsx
src/app/account/: page.tsx
src/app/analytics/: page.tsx
src/app/basic/: page.tsx
src/app/empire/: page.tsx
src/app/marketplace/: page.tsx
src/app/pulse/: page.tsx
src/components/: app-header.tsx
src/components/analytics/: analytics-feature.tsx  energy-trend-chart.tsx  network-stats.tsx  plot-map-visualization.tsx  points-distribution-chart.tsx  top-users-table.tsx
src/components/charging-session/: charging-session-data-access.tsx
src/components/marketplace/: marketplace-data-access.tsx  marketplace-feature.tsx  solana-pay-modal.tsx
src/components/pulse/: achievement-badges.tsx  charging-map.tsx  charging-session-card.tsx  (+4 more)
src/lib/: simulation.ts  solana-pay.ts
(+8 files in other folders)
